@@ -1,5 +1,10 @@
 2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/DefaultKeyedValue.java
+    (equals): Simplified to reflect that this.key is never null.
+
+2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/xy/XYBlockRenderer.java
     (drawItem): Inserted code to add entities.
 
